--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
   </head>
   <body>
     <div id="wrapper" class="mt-n3">
-      <h1>New Album Releases</h1>
+      <h1>New Album Releases <a href="./scrape"><button class="btn btn-primary"> Start scrape </button></a></h1>
       <h5>Click the album art to save your opinion on each new release!</h5>
       <div id="notes" class="my-4"></div>
       <div id="releases">
